[gd_scene load_steps=27 format=4 uid="uid://2mwu2nvltkml"]

[ext_resource type="PackedScene" uid="uid://bk5hlll0paigq" path="res://src/scenes/player.tscn" id="1_cjbbg"]
[ext_resource type="Texture2D" uid="uid://qn1a77qgcwfe" path="res://colors/palette_nostalgique.png" id="2_lqye1"]
[ext_resource type="TileSet" uid="uid://cjfrqi42sohwr" path="res://assets/Tilemap/debug/test_tileset.tres" id="3_02gmy"]
[ext_resource type="Script" path="res://src/scripts/MovingPlatforms.gd" id="3_2wtne"]
[ext_resource type="PackedScene" uid="uid://c1nvhr5xltas6" path="res://src/scenes/enemies/test_enemy.tscn" id="5_s7kod"]
[ext_resource type="PackedScene" uid="uid://dpalpjqljum7j" path="res://src/scenes/pnj/pnj_test.tscn" id="6_u15lx"]
[ext_resource type="Resource" uid="uid://bi5sem1xlw1ko" path="res://assets/PNJ/debug/dialogue_test.tres" id="7_40enp"]
[ext_resource type="Script" path="res://src/scripts/CutsceneLauncher.gd" id="7_vw347"]
[ext_resource type="Script" path="res://src/scripts/LevelExit.gd" id="8_n82ma"]
[ext_resource type="SpriteFrames" uid="uid://d14ipu3h86l7r" path="res://src/scenes/levels/LevelExitSpriteFrames.tres" id="10_4nwoo"]
[ext_resource type="PackedScene" uid="uid://cg4yn8t7i8s6u" path="res://src/scenes/levels/level_test2.tscn" id="10_d0173"]
[ext_resource type="Script" path="res://src/scripts/PowerUpDeposit.gd" id="11_1wp7o"]
[ext_resource type="Script" path="res://src/scripts/ExtendedAnimatedSprite2D.gd" id="11_6cu7p"]
[ext_resource type="Resource" uid="uid://b4f5dqrwu2a4r" path="res://assets/Levels/player_deposit_power_up_message.tres" id="12_awx8l"]
[ext_resource type="PackedScene" uid="uid://cmhasp0exa0mq" path="res://src/scenes/interact_text.tscn" id="12_k24ox"]
[ext_resource type="PackedScene" uid="uid://c747wycvgm7fb" path="res://src/scenes/enemies/smoke_dogo.tscn" id="16_pivqb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cx0g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w0le"]
size = Vector2(20, 2)

[sub_resource type="Curve2D" id="Curve2D_jnpxv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, -108, 0, 0, 0, 0, -63, -108, 0, 0, 0, 0, -65, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjcp8"]
size = Vector2(74, 20)

[sub_resource type="Curve2D" id="Curve2D_7tvug"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 29, -112, 0, 0, 0, 0, 166, -109, 0, 0, 0, 0, 55, -94, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_i08d3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 126, 1, 0, 0, 0, 0, -1, 0)
}
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_kynde"]
radius = 23.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilme0"]
size = Vector2(47, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgbc5"]
size = Vector2(46, 1.5)

[sub_resource type="Curve2D" id="Curve2D_iyarm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, 1, 0, 0, 0, 0, -204, 4, 0, 0, 0, 0, 121, 2, 0, 0, 0, 0, -1, 1)
}
point_count = 4

[node name="LevelTest" type="Node2D"]
texture_filter = 1

[node name="player" parent="." instance=ExtResource("1_cjbbg")]
z_index = 3
position = Vector2(88, 33)

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAwAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAABAAoAAQAAAAAAAAABAAsAAQAAAAAAAAABAAwAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAACAAwAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAwAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANAAwAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAwAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAARAAsAAQAAAAAAAAARAAwAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAATAAoAAQAAAAAAAAATAAsAAQAAAAAAAAATAAwAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAAAAAAUAAwAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAgAAQAAAAAAAAAVAAkAAQAAAAAAAAAVAAoAAQAAAAAAAAAVAAsAAQAAAAAAAAAVAAwAAQAAAAAAAAAWAAcAAQAAAAAAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAAAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAWAAwAAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAwAAQAAAAAAAAAYAAcAAQAAAAAAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAAwAAQAAAAAAAAAZAAcAAQAAAAAAAAAZAAgAAQAAAAAAAAAZAAkAAQAAAAAAAAAZAAoAAQAAAAAAAAAZAAsAAQAAAAAAAAAZAAwAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAAAAAAaAAwAAQAAAAAAAAAbAAcAAQAAAAAAAAAbAAgAAQAAAAAAAAAbAAkAAQAAAAAAAAAbAAoAAQAAAAAAAAAbAAsAAQAAAAAAAAAbAAwAAQAAAAAAAAAcAAcAAQAAAAAAAAAcAAgAAQAAAAAAAAAcAAkAAQAAAAAAAAAcAAoAAQAAAAAAAAAcAAsAAQAAAAAAAAAcAAwAAQAAAAAAAAAdAAcAAQAAAAAAAAAdAAgAAQAAAAAAAAAdAAkAAQAAAAAAAAAdAAoAAQAAAAAAAAAdAAsAAQAAAAAAAAAdAAwAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAgAAQAAAAAAAAAeAAkAAQAAAAAAAAAeAAoAAQAAAAAAAAAeAAsAAQAAAAAAAAAeAAwAAQAAAAAAAAAfAAcAAQAAAAAAAAAfAAgAAQAAAAAAAAAfAAkAAQAAAAAAAAAfAAoAAQAAAAAAAAAfAAsAAQAAAAAAAAAfAAwAAQAAAAAAAAAgAAcAAQAAAAAAAAAgAAgAAQAAAAAAAAAgAAkAAQAAAAAAAAAgAAoAAQAAAAAAAAAgAAsAAQAAAAAAAAAgAAwAAQAAAAAAAAAhAAcAAQAAAAAAAAAhAAgAAQAAAAAAAAAhAAkAAQAAAAAAAAAhAAoAAQAAAAAAAAAhAAsAAQAAAAAAAAAhAAwAAQAAAAAAAAAVAAAAAQABAAAAAAAVAAEAAQABAAAAAAAVAAIAAQABAAAAAAAVAAMAAQABAAAAAAAVAAQAAQABAAAAAAAVAAUAAQABAAAAAAAVAAYAAQABAAAAAAAdAAMAAQABAAAAAAAdAAQAAQABAAAAAAAdAAUAAQABAAAAAAAdAAYAAQABAAAAAAAPAAAAAQAAAAEAAAAPAAEAAQAAAAEAAAAPAAIAAQAAAAEAAAAPAAMAAQAAAAEAAAAHAAQAAQAAAAEAAAAIAAQAAQAAAAEAAAASAPz/AQAAAAEAAAATAPz/AQAAAAEAAAAUAPz/AQAAAAEAAAAcAP//AQAAAAEAAAAdAP//AQAAAAEAAAAeAP//AQAAAAEAAAAiAAcAAQAAAAAAAAAiAAgAAQAAAAAAAAAiAAkAAQAAAAAAAAAiAAoAAQAAAAAAAAAiAAsAAQAAAAAAAAAiAAwAAQAAAAAAAAAjAAcAAQAAAAAAAAAjAAgAAQAAAAAAAAAjAAkAAQAAAAAAAAAjAAoAAQAAAAAAAAAjAAsAAQAAAAAAAAAjAAwAAQAAAAAAAAAkAAcAAQAAAAAAAAAkAAgAAQAAAAAAAAAkAAkAAQAAAAAAAAAkAAoAAQAAAAAAAAAkAAsAAQAAAAAAAAAkAAwAAQAAAAAAAAAlAAcAAQAAAAAAAAAlAAgAAQAAAAAAAAAlAAkAAQAAAAAAAAAlAAoAAQAAAAAAAAAlAAsAAQAAAAAAAAAlAAwAAQAAAAAAAAAmAAcAAQAAAAAAAAAmAAgAAQAAAAAAAAAmAAkAAQAAAAAAAAAmAAoAAQAAAAAAAAAmAAsAAQAAAAAAAAAmAAwAAQAAAAAAAAAnAAcAAQAAAAAAAAAnAAgAAQAAAAAAAAAnAAkAAQAAAAAAAAAnAAoAAQAAAAAAAAAnAAsAAQAAAAAAAAAnAAwAAQAAAAAAAAAoAAcAAQAAAAAAAAAoAAgAAQAAAAAAAAAoAAkAAQAAAAAAAAAoAAoAAQAAAAAAAAAoAAsAAQAAAAAAAAAoAAwAAQAAAAAAAAApAAcAAQAAAAAAAAApAAgAAQAAAAAAAAApAAkAAQAAAAAAAAApAAoAAQAAAAAAAAApAAsAAQAAAAAAAAApAAwAAQAAAAAAAAAqAAcAAQAAAAAAAAAqAAgAAQAAAAAAAAAqAAkAAQAAAAAAAAAqAAoAAQAAAAAAAAAqAAsAAQAAAAAAAAAqAAwAAQAAAAAAAAArAAcAAQAAAAAAAAArAAgAAQAAAAAAAAArAAkAAQAAAAAAAAArAAoAAQAAAAAAAAArAAsAAQAAAAAAAAArAAwAAQAAAAAAAAAsAAcAAQAAAAAAAAAsAAgAAQAAAAAAAAAsAAkAAQAAAAAAAAAsAAoAAQAAAAAAAAAsAAsAAQAAAAAAAAAsAAwAAQAAAAAAAAAtAAcAAQAAAAAAAAAtAAgAAQAAAAAAAAAtAAkAAQAAAAAAAAAtAAoAAQAAAAAAAAAtAAsAAQAAAAAAAAAtAAwAAQAAAAAAAAAuAAcAAQAAAAAAAAAuAAgAAQAAAAAAAAAuAAkAAQAAAAAAAAAuAAoAAQAAAAAAAAAuAAsAAQAAAAAAAAAuAAwAAQAAAAAAAAAvAAcAAQAAAAAAAAAvAAgAAQAAAAAAAAAvAAkAAQAAAAAAAAAvAAoAAQAAAAAAAAAvAAsAAQAAAAAAAAAvAAwAAQAAAAAAAAAwAAcAAQAAAAAAAAAwAAgAAQAAAAAAAAAwAAkAAQAAAAAAAAAwAAoAAQAAAAAAAAAwAAsAAQAAAAAAAAAwAAwAAQAAAAAAAAAxAAcAAQAAAAAAAAAxAAgAAQAAAAAAAAAxAAkAAQAAAAAAAAAxAAoAAQAAAAAAAAAxAAsAAQAAAAAAAAAxAAwAAQAAAAAAAAAyAAcAAQAAAAAAAAAyAAgAAQAAAAAAAAAyAAkAAQAAAAAAAAAyAAoAAQAAAAAAAAAyAAsAAQAAAAAAAAAyAAwAAQAAAAAAAAAzAAcAAQAAAAAAAAAzAAgAAQAAAAAAAAAzAAkAAQAAAAAAAAAzAAoAAQAAAAAAAAAzAAsAAQAAAAAAAAAzAAwAAQAAAAAAAADx/wcAAQAAAAAAAADx/wgAAQAAAAAAAADx/wkAAQAAAAAAAADx/woAAQAAAAAAAADx/wsAAQAAAAAAAADx/wwAAQAAAAAAAADy/wcAAQAAAAAAAADy/wgAAQAAAAAAAADy/wkAAQAAAAAAAADy/woAAQAAAAAAAADy/wsAAQAAAAAAAADy/wwAAQAAAAAAAADz/wcAAQAAAAAAAADz/wgAAQAAAAAAAADz/wkAAQAAAAAAAADz/woAAQAAAAAAAADz/wsAAQAAAAAAAADz/wwAAQAAAAAAAAD0/wcAAQAAAAAAAAD0/wgAAQAAAAAAAAD0/wkAAQAAAAAAAAD0/woAAQAAAAAAAAD0/wsAAQAAAAAAAAD0/wwAAQAAAAAAAAD1/wcAAQAAAAAAAAD1/wgAAQAAAAAAAAD1/wkAAQAAAAAAAAD1/woAAQAAAAAAAAD1/wsAAQAAAAAAAAD1/wwAAQAAAAAAAAD2/wcAAQAAAAAAAAD2/wgAAQAAAAAAAAD2/wkAAQAAAAAAAAD2/woAAQAAAAAAAAD2/wsAAQAAAAAAAAD2/wwAAQAAAAAAAAD3/wcAAQAAAAAAAAD3/wgAAQAAAAAAAAD3/wkAAQAAAAAAAAD3/woAAQAAAAAAAAD3/wsAAQAAAAAAAAD3/wwAAQAAAAAAAAD4/wcAAQAAAAAAAAD4/wgAAQAAAAAAAAD4/wkAAQAAAAAAAAD4/woAAQAAAAAAAAD4/wsAAQAAAAAAAAD4/wwAAQAAAAAAAAD5/wcAAQAAAAAAAAD5/wgAAQAAAAAAAAD5/wkAAQAAAAAAAAD5/woAAQAAAAAAAAD5/wsAAQAAAAAAAAD5/wwAAQAAAAAAAAD6/wcAAQAAAAAAAAD6/wgAAQAAAAAAAAD6/wkAAQAAAAAAAAD6/woAAQAAAAAAAAD6/wsAAQAAAAAAAAD6/wwAAQAAAAAAAAD7/wcAAQAAAAAAAAD7/wgAAQAAAAAAAAD7/wkAAQAAAAAAAAD7/woAAQAAAAAAAAD7/wsAAQAAAAAAAAD7/wwAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wgAAQAAAAAAAAD8/wkAAQAAAAAAAAD8/woAAQAAAAAAAAD8/wsAAQAAAAAAAAD8/wwAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAAAAAD9/wkAAQAAAAAAAAD9/woAAQAAAAAAAAD9/wsAAQAAAAAAAAD9/wwAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAAD+/wkAAQAAAAAAAAD+/woAAQAAAAAAAAD+/wsAAQAAAAAAAAD+/wwAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAD//wkAAQAAAAAAAAD//woAAQAAAAAAAAD//wsAAQAAAAAAAAD//wwAAQAAAAAAAADx//b/AQAAAAAAAADx//f/AQAAAAAAAADx//j/AQAAAAAAAADx//n/AQAAAAAAAADx//r/AQAAAAAAAADx//v/AQAAAAAAAADx//z/AQAAAAAAAADx//3/AQAAAAAAAADx//7/AQAAAAAAAADx////AQAAAAAAAADx/wAAAQAAAAAAAADx/wEAAQAAAAAAAADx/wIAAQAAAAAAAADx/wMAAQAAAAAAAADx/wQAAQAAAAAAAADx/wUAAQAAAAAAAADx/wYAAQAAAAAAAAD6/wIAAQABAAEAAAD7/wIAAQABAAEAAAD8/wIAAQABAAEAAAD9/wIAAQABAAEAAAD+/wIAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAADl//b/AQAAAAAAAADm//b/AQAAAAAAAADn//b/AQAAAAAAAADo//b/AQAAAAAAAADp//b/AQAAAAAAAADq//b/AQAAAAAAAADr//b/AQAAAAAAAADs//b/AQAAAAAAAADt//b/AQAAAAAAAADu//b/AQAAAAAAAADv//b/AQAAAAAAAADw//b/AQAAAAAAAADl//L/AQAAAAAAAADm//L/AQAAAAAAAADn//L/AQAAAAAAAADo//L/AQAAAAAAAADp//L/AQAAAAAAAADq//L/AQAAAAAAAADr//L/AQAAAAAAAADs//L/AQAAAAAAAADt//L/AQAAAAAAAADu//L/AQAAAAAAAADv//L/AQAAAAAAAADw//L/AQAAAAAAAADx//L/AQAAAAAAAADi//b/AQAAAAAAAADj//b/AQAAAAAAAADk//b/AQAAAAAAAADi//L/AQAAAAAAAADj//L/AQAAAAAAAADk//L/AQAAAAAAAADi//P/AQAAAAAAAADi//T/AQAAAAAAAADi//X/AQAAAAAAAADx/+j/AQAAAAAAAADx/+n/AQAAAAAAAADx/+r/AQAAAAAAAADx/+v/AQAAAAAAAADx/+z/AQAAAAAAAADx/+3/AQAAAAAAAADx/+7/AQAAAAAAAADx/+//AQAAAAAAAADx//D/AQAAAAAAAADx//H/AQAAAAAAAAA3AAcAAQAAAAAAAAA3AAgAAQAAAAAAAAA3AAkAAQAAAAAAAAA3AAoAAQAAAAAAAAA3AAsAAQAAAAAAAAA3AAwAAQAAAAAAAAA4AAwAAQAAAAAAAAA5AAwAAQAAAAAAAAA6AAwAAQAAAAAAAAA7AAwAAQAAAAAAAAA8AAwAAQAAAAAAAAA9AAwAAQAAAAAAAAA9AAsAAQAAAAAAAAA9AAoAAQAAAAAAAAA9AAkAAQAAAAAAAAA9AAgAAQAAAAAAAAA9AAcAAQAAAAAAAAA8AAcAAQAAAAAAAAA7AAcAAQAAAAAAAAA6AAcAAQAAAAAAAAA5AAcAAQAAAAAAAAA4AAcAAQAAAAAAAAA4AAgAAQAAAAAAAAA4AAkAAQAAAAAAAAA4AAoAAQAAAAAAAAA5AAoAAQAAAAAAAAA5AAsAAQAAAAAAAAA6AAkAAQAAAAAAAAA6AAgAAQAAAAAAAAA5AAgAAQAAAAAAAAA5AAkAAQAAAAAAAAA4AAsAAQAAAAAAAAA6AAoAAQAAAAAAAAA6AAsAAQAAAAAAAAA7AAoAAQAAAAAAAAA7AAkAAQAAAAAAAAA7AAgAAQAAAAAAAAA7AAsAAQAAAAAAAAA8AAkAAQAAAAAAAAA8AAgAAQAAAAAAAAA8AAoAAQAAAAAAAAA8AAsAAQAAAAAAAAA=")
tile_set = ExtResource("3_02gmy")

[node name="MovingPlatform" type="AnimatableBody2D" parent="."]
position = Vector2(-119, 68)
collision_layer = 3
collision_mask = 0
script = ExtResource("3_2wtne")
IS_ACTIVATED_BY_PLAYER = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform"]
shape = SubResource("RectangleShape2D_2cx0g")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform"]
position = Vector2(-5.48363e-06, -4.76837e-07)
scale = Vector2(0.078125, 0.625)
texture = ExtResource("2_lqye1")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="MovingPlatform"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/Area2D"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_1w0le")

[node name="Path2D" type="Path2D" parent="MovingPlatform"]
curve = SubResource("Curve2D_jnpxv")
metadata/_edit_lock_ = true

[node name="PathFollow2D" type="PathFollow2D" parent="MovingPlatform/Path2D"]
rotation = -1.55228
metadata/_edit_lock_ = true

[node name="MovingPlatform2" type="AnimatableBody2D" parent="."]
position = Vector2(181, -11)
collision_layer = 3
collision_mask = 0
script = ExtResource("3_2wtne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform2"]
shape = SubResource("RectangleShape2D_yjcp8")

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform2"]
position = Vector2(-7.62939e-06, -4.76837e-07)
scale = Vector2(0.289062, 0.625)
texture = ExtResource("2_lqye1")
metadata/_edit_lock_ = true

[node name="Path2D" type="Path2D" parent="MovingPlatform2"]
curve = SubResource("Curve2D_7tvug")
metadata/_edit_lock_ = true

[node name="PathFollow2D" type="PathFollow2D" parent="MovingPlatform2/Path2D"]
rotation = -1.31743
metadata/_edit_lock_ = true

[node name="TestEnemy" parent="." instance=ExtResource("5_s7kod")]
position = Vector2(200, 104)

[node name="Path2D" type="Path2D" parent="TestEnemy"]
curve = SubResource("Curve2D_i08d3")

[node name="PathFollow2D" type="PathFollow2D" parent="TestEnemy/Path2D"]
position = Vector2(-1, 0)
rotation = 0.00787385

[node name="PNJ_Test" parent="." instance=ExtResource("6_u15lx")]
position = Vector2(-64, 96)
DIALOGUE = ExtResource("7_40enp")

[node name="CutsceneLauncher" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_vw347")
cutscene_path = "res://assets/Cutscenes/file_example_OGG_1280_11_4mg.ogg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CutsceneLauncher"]
position = Vector2(472, -23)
shape = SubResource("CircleShape2D_kynde")

[node name="LevelExit" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2
script = ExtResource("8_n82ma")
NEXT_LEVEL = ExtResource("10_d0173")
POWER_CONDITIONS = Array[String](["Double Jump"])

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelExit"]
position = Vector2(-440.5, -184)
shape = SubResource("RectangleShape2D_ilme0")

[node name="ExtendedAnimatedSprite2D" type="AnimatedSprite2D" parent="LevelExit"]
position = Vector2(-440, -176)
sprite_frames = ExtResource("10_4nwoo")
animation = &"opened"
script = ExtResource("11_6cu7p")

[node name="InteractText" parent="LevelExit" instance=ExtResource("12_k24ox")]
offset_left = -469.0
offset_top = -209.0
offset_right = -469.0
offset_bottom = -209.0
scale = Vector2(0.2, 0.2)

[node name="PowerUpDeposit" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("11_1wp7o")
DEPOSIT_DIALOGUE = ExtResource("12_awx8l")
POWER_UP_TO_DEPOSIT = "Double Jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerUpDeposit"]
position = Vector2(312, -64.25)
shape = SubResource("RectangleShape2D_vgbc5")

[node name="InteractText" parent="PowerUpDeposit" instance=ExtResource("12_k24ox")]
offset_left = 282.0
offset_top = -90.0
offset_right = 282.0
offset_bottom = -90.0
scale = Vector2(0.2, 0.2)

[node name="SmokeDogo" parent="." instance=ExtResource("16_pivqb")]
position = Vector2(696, 89)

[node name="Path2D" type="Path2D" parent="SmokeDogo"]
curve = SubResource("Curve2D_iyarm")

[node name="PathFollow2D" type="PathFollow2D" parent="SmokeDogo/Path2D"]
position = Vector2(-1, 1)
rotation = 3.12682
